--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,113 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+main {
+    min-height: 100vh;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+table {
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+td, th{
+    border: 1px solid rgba(61, 101, 109, 0.873);
+    text-align: center;
+    min-width: 50px;
+    color: white;
+    padding: 4px;
+}
+
+tr {
+    height: 30px;
+    background-color: #111b2d;
+}
+thead tr {
+    height: 20px;
+}
+
+th {
+    background-color: rgba(70, 70, 207, 0.363);
+}
+
+input:focus {
+    outline: none;
+}
+
+@keyframes glow {
+    0% {
+        box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    }
+    50% {
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.9);
+    }
+    100% {
+        box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    }
+}
+@keyframes glow-hover {
+    0% {
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    }
+    50% {
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
+    }
+    100% {
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    }
+}
+@keyframes fadeIn {
+    from {
+        opacity: .5;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fade-in {
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+.go-back:hover {
+    animation: glow 1s infinite;
+}
+
+.glow-on-hover {
+    animation: glow 1s infinite;
+}
+.glow-on-hover:hover {
+    animation: glow-hover 1s infinite;
+}
+
+.team-logo:hover img {
+    transition: transform 0.5s;
+    transform: scale(1.05);
+}
+
+.team-logo:hover p {
+    transition: color 0.5s;
+    color: rgb(0, 132, 255);
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    color: rgba(215, 215, 215, 0.866);
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.177); 
+    border-radius: 5px;
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background: rgba(80, 106, 125, 0.434); 
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(51, 110, 150, 0.536);
+  }
